--- a/src/style/styleApp.css
+++ b/src/style/styleApp.css
@@ -1,4 +1,8 @@
 .App {
     width: 45%;
     margin: auto;
+    border: 4px solid #a1a1a1;
+    border-radius: 10px;
+    padding: 40px;
+    margin-top: 15px;
 }
