--- a/src/style/styleApp.css
+++ b/src/style/styleApp.css
@@ -1,8 +1,31 @@
 .App {
     width: 70%;
-    margin: auto;
+    margin: 20px auto;
     border: 4px solid #a1a1a1;
     border-radius: 10px;
     padding: 40px;
-    margin-top: 15px;
+}
+
+.nav_bar_contant {
+    display: flex;
+    width: 70%;
+    margin: 40px auto;
+    justify-content: center;
+    align-items: center;
+    border: 4px solid #a1a1a1;
+    border-radius: 10px;
+}
+
+.nav_bar {
+    display: flex;
+    width: 20%;
+    justify-content: space-between;
+    align-items: center;
+    margin: 15px 0;
+}
+
+.link_button {
+    text-decoration: none;
+    font-size: 20px;
+    color: black;
 }
